Added pulse map to site

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,13 @@
    <script src="js/jquery.fittext.js"></script>
    <script src="js/magnific-popup.js"></script>
    <script src="js/init.js"></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61424121-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-61424121-1');
+    </script>
   </body>
 </html>
